syntax = "proto3";

option go_package = "./pb";

package hausops.mono.services.property;

service Property {
  rpc Create(PropertyRequest) returns (PropertyResponse);
  rpc FindByID(PropertyIDRequest) returns (PropertyResponse);
  rpc List(Empty) returns (PropertyListResponse);
  rpc Delete(PropertyIDRequest) returns (PropertyResponse);
}

message PropertyListResponse { repeated PropertyResponse properties = 1; }

message PropertyResponse {
  oneof property {
    SingleFamilyProperty single_family_property = 1;
    MultiFamilyProperty multi_family_property = 2;
  }
}

message SingleFamilyProperty {
  string id = 1;
  Address address = 3;
  string cover_image_url = 10;
  int32 year_built = 12;
  RentalUnit unit = 15;
}

message MultiFamilyProperty {
  string id = 1;
  Address address = 3;
  string cover_image_url = 10;
  int32 year_built = 12;
  repeated RentalUnit units = 15;
}

message RentalUnit {
  string id = 1;
  string number = 3;
  float bedrooms = 8;
  float bathrooms = 9;
  float size = 12;
  float rent_amount = 15;
}

message Address {
  string line1 = 1;
  string line2 = 2;
  string city = 3;
  string state = 4;
  string zip = 5;
}

message PropertyIDRequest { string id = 1; }

message PropertyRequest {
  oneof property {
    SingleFamilyPropertyRequest single_family_property = 1;
    MultiFamilyPropertyRequest multi_family_property = 2;
  }
}

message SingleFamilyPropertyRequest {
  optional Address address = 3;
  optional string cover_image_url = 10;
  optional int32 year_built = 12;
  optional RentalUnitRequest unit = 15;
}

message MultiFamilyPropertyRequest {
  optional Address address = 3;
  optional string cover_image_url = 10;
  optional int32 year_built = 12;
  repeated RentalUnitRequest units = 15;
}

message RentalUnitRequest {
  optional string number = 3;
  optional float bedrooms = 8;
  optional float bathrooms = 9;
  optional float size = 12;
  optional float rent_amount = 15;
}

message Empty {
  // empty message
}
